# chat_real_estate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy_app.sh  flask_demo.py  flask_server.py  globals.py  gunicorn.conf.py  index_server.py  initialize_index.py  launch_app.sh  launch_app_dev.sh  launch_backend.sh  local.yaml  main.py  requirements.txt  utils.py
backend/: .env.example  pyproject.toml
backend/backend/: settings.py  urls.py
backend/customers/: backends.py  forms.py  models.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_remove_customer_user.py  0003_alter_customer_password.py
backend/helpers/: helpers.py
backend/llm_integration/: admin.py  apps.py  forms.py  globals.py  models.py  urls.py  views.py
backend/llm_integration/migrations/: 0001_initial.py  0002_index_customer_alter_index_index_id.py  0003_alter_index_index_id.py  0004_uploadedfile.py  0005_alter_uploadedfile_description.py
compose/local/django/: Dockerfile
compose/local/frontend/: .dockerignore  Dockerfile
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: DocumentTools.tsx  DocumentUploader.tsx  DocumentViewer.tsx  head.js  head.tsx  layout.js  layout.tsx  loginForm.js  loginForm.tsx  nav.js  nav.tsx  navProfile.js  navProfile.tsx  nprogress.tsx  routeGuard.js  routeGuard.ts  signupForm.js  signupForm.tsx
frontend/helpers/: api.js  api.ts  logger.ts
frontend/interceptors/: axios.ts
frontend/pages/: _app.js  _app.tsx  index.js  index.tsx  login.js  login.tsx  signup.js  signup.tsx
frontend/pages/dashboard/: index.js  index.tsx
frontend/pages/my_indexes/: index.js  index.tsx
frontend/pages/profile/: index.js  index.tsx
frontend/utils/: auth.js  auth.ts  redirect.ts
react_frontend/: package-lock.json  package.json
react_frontend/public/: index.html  manifest.json
react_frontend/src/: App.tsx  style.css
react_frontend/src/apis/: api.tsx  fetchDocuments.tsx  insertDocument.tsx  (+2 more)
(+5 files in other folders)
