[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for SaltoGPT"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
openai = "^0.27.8"
django = "^4.2.2"
langchain = "^0.0.238"
django-environ = "^0.10.0"
django-rest-framework = "^0.1.0"
llama-index = "^0.7.11.post1"
google-auth = "^2.20.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.9.0"
django-cors-headers = "^4.1.0"
djangorestframework = "^3.14.0"
tiktoken = "^0.4.0"
djangorestframework-simplejwt = "^5.2.2"
pypdf = "^3.12.0"
psycopg2 = "^2.9.6"
dj-database-url = "^2.0.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
docx2txt = "^0.8"
pre-commit = "^3.3.3"
tomli = "^2.0.1"
qdrant-client = "^1.3.1"
sentence-transformers = "^2.2.2"
gcsfs = "^2023.6.0"
torch = ">=2.0.0, !=2.0.1"
pyodbc = "^4.0.39"
duckdb = "^0.8.1"
google-cloud-bigquery = "^3.11.4"
sqlalchemy = "^2.0.19"
pandas-gbq = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
